greet-app/base/nginx-spa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-spa-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: nginx-spa
  sessionAffinity: None
  type: ClusterIP
