greet-app/base/nginx-spa/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: nginx-spa-route
spec:
  port:
    targetPort: 3000
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx-spa-svc
    weight: 100
  wildcardPolicy: None
